### Added

- Added "mop presave" command, for testing the pre-save functionality

### Changes

- Haybales are now toggled as items (instead of world objects)
- Haybales are now visible from much furter distance
- Large item's LODs will be toggled from larger distance in Balanced mode or above