@@ -7,3 +7,7 @@
 - Haybales are now toggled as items (instead of world objects)
 - Haybales are now visible from much furter distance
 - Large item's LODs will be toggled from larger distance in Balanced mode or above
+
+### Bug Fixes
+
+- Fixed the advert pile disappearing, if taken away from Perajarvi
